--- a/configFile/application-test.properties
+++ b/configFile/application-test.properties
@@ -1,3 +1,1 @@
-server.port=8004
-spring.application.name=book-config-server
-#spring.cloud.config.server.git.known-hosts-file=
+profile= application-test
