--- a/configFile/book-client-server.properties
+++ b/configFile/book-client-server.properties
@@ -1,1 +1,2 @@
-profile= profile-default
+#profile= profile-default
+eureka.client.service-url.defaultZone=http://peer1:8001/eureka/,http://peer2:8002/eureka/
