--- a/bookmanageserver/src/main/resources/application.yml
+++ b/bookmanageserver/src/main/resources/application.yml
@@ -1,11 +1,18 @@
 spring:
+  thymeleaf:
+    cache: false
+  devtools:
+    restart:
+      enabled: true
+      additional-paths: src/main/java
+      #exclude: static/**,page/**
   datasource:
     #驱动配置信息
     type: com.alibaba.druid.pool.DruidDataSource
     url: jdbc:mysql://127.0.0.1:3306/book_manage_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
     username: root
     password: 123456
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     #连接池的配置信息
     initialSize: 5
     minIdle: 5
@@ -21,4 +28,25 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     filters: stat,wall
     connectionProperties: druid.stat.mergeSql=true; druid.stat.slowSqlMillis=5000
+    # Redis数据库索引（默认为0）
+    redis:
+      database: 0
+      # Redis服务器地址
+      host: 127:0:0:1
+      # Redis服务器连接端口
+      port: 6379
+      # Redis服务器连接密码（默认为空）
+      password: 123456
+      # 连接池最大连接数（使用负值表示没有限制）
+      max-active: 8
+      # 连接超时时间（毫秒）
+      timeout: 0
+    pool:
+      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-wait: -1
+      # 连接池中的最大空闲连接
+      max-idle: 8
+      # 连接池中的最小空闲连接
+      min-idle: 0
+
 
